# GenericDataBindingWithQt

./: .coveralsl.yml  .gitignore  .travis.yml  CMakeLists.txt  DemoApp.pro  GenericDataBindingWithQt.pro  README.md  main.cpp
DataBinding/: CMakeLists.txt  DataBinding.pro  DataClient.cpp  DataClient.h  DataClientManager.cpp  DataClientManager.h  IDataClient.h  IDataClientManager.h
DataBinding/DataBindingTest/: CMakeLists.txt  DataBindingTest.pro  MockDataClientManager.h  MockDataProxy.h  TestDataClient.h  gtest_dependency.pri  main.cpp  tst_DataClient.h  tst_DataClientManager.h
DataBinding/doc/: DataClientClassDiagram.uml  DataClientManagerClassDiagram.uml
DataProvider/: CMakeLists.txt  DataProvider.cpp  DataProvider.h  DataProvider.pro  DataProxy.cpp  DataProxy.h  IDataProvider.h  IDataProxy.h
DataProvider/DataProviderTest/: CMakeLists.txt  DataProviderTest.pro  MockConnector.h  MockDataClientManager.h  MockDataProvider.h  MockDataProxy.h  TestValues.cpp  TestValues.h  main.cpp  tst_DataProvider.h  tst_DataProxy.h
DataProvider/doc/: DataProviderClassDiagram.uml
DemoApp/: BaseFrame.cpp  BaseFrame.h  DemoApp.pro  main.cpp
DemoApp/DataClientManagers/: BaseFrame.cpp
DemoApp/DataClients/: CheckBox.cpp  CheckBox.h  ComboBox.cpp  ComboBox.h  DCCheckBox.cpp  DCCheckBox.h  DCComboBox.cpp  DCComboBox.h  DCLabel.cpp  DCLabel.h  DCLineEdit.cpp  DCLineEdit.h  DCPushButton.cpp  DCPushButton.h  DCTextEdit.cpp  DCTextEdit.h  Label.cpp  Label.h  LineEdit.cpp  LineEdit.h  PushButton.cpp  PushButton.h  TextEdit.cpp  TextEdit.h
DemoQmlApp/: CMakeLists.txt  DCComponent.cpp  DCComponent.h  DCLineEdit.cpp  DCLineEdit.h  DemoQmlApp.pro  main.cpp
DemoQmlApp/qml/: MainWindow.qml
DemoWidgetApp/: CMakeLists.txt  DemoWidgetApp.pro  main.cpp
DemoWidgetApp/DataClientManagers/: BaseFrame.cpp  BaseFrame.h
DemoWidgetApp/DataClients/: DCCheckBox.cpp  DCCheckBox.h  DCComboBox.cpp  DCComboBox.h  DCLabel.cpp  DCLabel.h  DCLineEdit.cpp  DCLineEdit.h  DCPushButton.cpp  DCPushButton.h  DCTextEdit.cpp  DCTextEdit.h
IntegrationTest/: CMakeLists.txt  IntegrationTest.pro  MockConnector.h  main.cpp  tst_CopyRequest.h  tst_MultiRequests.h  tst_RequestWithDeletedManager.h
RequestBroker/: CMakeLists.txt  IConnector.h  RequestBroker.cpp  RequestBroker.h  RequestBroker.pro
RequestBroker/RequestBrokerTest/: CMakeLists.txt  RequestBrokerTest.pro  main.cpp  target.mk
RequestData/: RequestCommand.cpp  RequestCommand.h  RequestData.cpp  RequestData.h  RequestData.pro
RequestData/RequestDataTest/: RequestDataTest.pro  TestValues.h  gtest_dependency.pri  tst_RequestData.h
RequestData/doc/: RequestDataClassDiagram.uml
RequestResponseData/: CMakeLists.txt  RequestCommand.cpp  RequestCommand.h  RequestData.cpp  RequestData.h  RequestResponseData.pro  ResponseData.cpp  ResponseData.h
RequestResponseData/RequestResponseDataTest/: CMakeLists.txt  RequestResponseDataTest.pro  TestRequestValues.cpp  TestRequestValues.h  TestResponseValues.cpp  TestResponseValues.h  TestValues.h  main.cpp  tst_RequestData.h  tst_ResponseData.h
RequestResponseData/TestDataValues/: CMakeLists.txt  TestDataValues.pro  TestResponseValues.h
doc/: ClassDiagram.uml
